2003-02-22  Junichi Uekawa  <dancer@debian.org>

	* pbuilder: check if it is in UML mode, and do not warn if it is in 
	UML mode.

2003-02-14  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: update ssh installing script 
	to allow X forwarding.

2003-02-13  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: document an example script to 
	start up ssh inside pbuilder-uml.

	* pbuilder-checkparams: support execute option.

	* Documentation/pbuilder-doc.xml: document pbuilder-uml more, 
	and execute command.

	* pbuilder-modules: update copyright statement.
	document "execute"

	* pbuilder-user-mode-linux.1: document "execute" command

	* pbuilder-user-mode-linux: implement execute command.

	* pbuilder.8: document "execute"

	* pbuilder: "execute" command.

2003-02-10  Junichi Uekawa  <dancer@debian.org>

	* pdebuild: set pdebuild here as well.

	* pbuilder-checkparams (BASEBUILDPLACE): support the convention, and 
	do not exec < /dev/null in that case.

	* pdebuild-user-mode-linux (PBCURRENTCOMMANDLINEOPERATION): set to
	pdebuild-user-mode-linux.

	* pbuilder-user-mode-linux.1: fix manual to have pbuilder-uml.conf.5

	* Makefile (install): add pdebuild-user-mode-linux

	* pdebuild-user-mode-linux.1: Initial manual page.

	* pdebuild-user-mode-linux: try making a new script that 
	uses pbuilder-user-mode-linux for building instead of pbuilder.

2003-02-04  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-buildpackage-funcs: use "cp -p" in copydsc

2003-01-29  Junichi Uekawa  <dancer@debian.org>

	* pbuilder: add warning on never to bind mount on login.

	* pbuilder-uml.conf.5: document the FQDN lookup quirk.

	* pbuilder-uml.conf (UML_HOSTNAME): default value is the hostname
	of the host system.

2003-01-28  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml (EXTRAPACKAGES): document that.

	* pbuilder.8: document apt-get update hook.
