@@ -2,7 +2,19 @@
 <!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook XML V4.2//EN" "docbookx.dtd"> 
 <!-- the original of this documentation is in pbuilder source tar-ball -->
 <book>
-  <title>pbuilder User's Manual</title>
+  <bookinfo>
+    <date>2003-03-01</date>
+    <title>pbuilder User's Manual</title>
+    <abbrev>pbuilder-doc</abbrev>
+    <subtitle>Usage and operations</subtitle>
+    <releaseinfo>documentation in progress</releaseinfo>
+    <authorgroup>
+      <author>
+	<firstname>Junichi</firstname>
+	<surname>Uekawa</surname>
+      </author>
+    </authorgroup>
+  </bookinfo>
   <chapter>
     <title>Introducing pbuilder</title>
     <sect1>
