@@ -1,3 +1,8 @@
+2003-03-01  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.xml: update documentation info 
+	somewhat to match what dxml-db2latex expects.
+
 2003-02-22  Junichi Uekawa  <dancer@debian.org>
 
 	* pbuilder: check if it is in UML mode, and do not warn if it is in 
